[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eks-comprehensive-debugger"
version = "3.0.0"
description = "Production-grade diagnostic tool for Amazon EKS cluster troubleshooting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "EKS Debugger Contributors"}
]
keywords = ["aws", "eks", "kubernetes", "debugging", "troubleshooting", "k8s"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: DevOps",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.26.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.0",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
eks-debugger = "eks_comprehensive_debugger:main"

[project.urls]
Homepage = "https://github.com/your-org/eks-comprehensive-debugger"
Documentation = "https://github.com/your-org/eks-comprehensive-debugger#readme"
Repository = "https://github.com/your-org/eks-comprehensive-debugger"
Issues = "https://github.com/your-org/eks-comprehensive-debugger/issues"

[tool.setuptools]
py-modules = ["eks_comprehensive_debugger"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM102", "B904"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_return_any = false
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
